--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
-0.02.2 Include subproperties in meta childern.
+0.3.0 Distinguish 'edge' and 'child' properties
+- A four sided propert has 'edges'. E.g. 'border' has
+  'border-top', ... 'border-left'
+- A compound property has children. E.g. 'background' has 'background-color',
+  'background-attachment', 'background-image', ...
+0.2.2 Include subproperties in meta childern.
 - E.g. "cue" now has child properties "cue-before", "cue-after"
 - These are distinguished from "box" properties by not having the :box flag set.
