--- a/Changes
+++ b/Changes
@@ -1,3 +1,4 @@
+0.3.1 Preserve declaration order of child properties in metadata
 0.3.0 Distinguish 'edge' and 'child' properties
 - A four sided propert has 'edges'. E.g. 'border' has
   'border-top', ... 'border-left'
