--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.4.2 Bugfix a length can be a percentage quantity
+- Also reinstate t/terms.t, lost around 538f043
 0.4.1 Output a specific unit for zero quantities.
 - For example the as for length '0' is now :px(0) rather than :length(0).
 0.4.0 Added rule declarations.
