--- a/Changes
+++ b/Changes
@@ -1,3 +1,4 @@
+0.4.3 Move test classes into lib path; t::CSS::Aural::Grammar, etc.
 0.4.2 Bugfix a length can be a percentage quantity
 - Also reinstate t/terms.t, lost around 538f043
 0.4.1 Output a specific unit for zero quantities.
