--- a/Changes
+++ b/Changes
@@ -1,3 +1,4 @@
+0.4.7 Fix for CSS::Grammar 0.3.4
 0.4.6 Rename sources *.pm -> *.rakumod; *.rakumod; *.pl -> *.raku
 0.4.5 Use color chart from Color::Names::CSS3 (Color::Names module)
 0.4.4 Fixed whitespace handling on quantifiers
