--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Don't special-case unknown properties in `:lax` mode - let the
+    caller handle this.
 
 0.4.8  2021-03-17T08:32:39+13:00
   - Renamed github project and repository
