--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Use CSS::Grammer 0.3.9 build method for AST construction
 
 0.4.10  2021-04-24T07:36:51+12:00
   - Rename grammar CSS::Specification::Terms -> CSS::Specificaton::Defs
