--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Remore internal perl6 references; replace with Raku.
+  - Upload to zef ecosystem
 
 0.4.11  2021-08-20T11:21:04+12:00
   - Use CSS::Grammer 0.3.9 build() method for AST construction
