--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix for Color::Names api(v2)
 
 0.4.12  2022-06-16T11:43:36+12:00
   - Remore internal perl6 references; replace with Raku.
